bug 795305 - http channel can drop callback references sooner on asyncopen failures r=jduell

--HG--
extra : rebase_source : 95240c7f54ef177e285217f4c35cd2474f78aed2